Removing a gap in timeline causes audio to go out of sync #68036

Closed
opened 2019-08-01 03:50:30 +02:00 by Eric Jiang · 5 comments

System Information
Operating system: Ubuntu Linux 18.04.2 LTS amd64
Graphics card: Nvidia Geforce GTX 980

Blender Version
Broken: 2.80 release
Worked: 2.80-445433a6913f

Short description of error
After using Remove Gaps functionality in VSE timeline, audio is not updated and still plays based on state before removing gap.

Exact steps for others to reproduce the error

(Timing below are for illustration and do not need to be exact.)

  1. New Video Editing project.
  2. Drag audio clip onto timeline (longer than 1 minute for below instructions).
  3. Confirm audio plays properly.
  4. Cut audio clip at 20 seconds.
  5. Cut audio clip at 40 seconds.
  6. Delete middle clip (20-40s).
  7. Position timeline cursor at 30s.
  8. Press Backspace (Remove Gaps). Second audio clip should move left to start at 20s.
  9. Position cursor at 15s.
  10. Play timeline. Note that audio stops playing at 20s and resumes playing at 40s, even though we have removed the gap. That is, the audio that plays doesn't match the timeline view.
  11. Select the audio clip and, in the Source pane, toggle "Caching" one or more times.
  12. Play the audio again and see that it what plays now matches what's shown on the timeline.
**System Information** Operating system: Ubuntu Linux 18.04.2 LTS amd64 Graphics card: Nvidia Geforce GTX 980 **Blender Version** Broken: 2.80 release Worked: 2.80-445433a6913f **Short description of error** After using Remove Gaps functionality in VSE timeline, audio is not updated and still plays based on state before removing gap. **Exact steps for others to reproduce the error** (Timing below are for illustration and do not need to be exact.) 1. New Video Editing project. 2. Drag audio clip onto timeline (longer than 1 minute for below instructions). 3. Confirm audio plays properly. 4. Cut audio clip at 20 seconds. 5. Cut audio clip at 40 seconds. 6. Delete middle clip (20-40s). 7. Position timeline cursor at 30s. 8. Press Backspace (Remove Gaps). Second audio clip should move left to start at 20s. 9. Position cursor at 15s. 10. Play timeline. Note that audio stops playing at 20s and resumes playing at 40s, even though we have removed the gap. That is, the audio that plays doesn't match the timeline view. 11. Select the audio clip and, in the Source pane, toggle "Caching" one or more times. 12. Play the audio again and see that it what plays now matches what's shown on the timeline.
Author

Added subscriber: @erjiang-3

Added subscriber: @erjiang-3
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-08-01 10:11:21 +02:00
Member

This looks similar to a7d9e2f57e, will check on this

This looks similar to a7d9e2f57e, will check on this

This issue was referenced by 765ed6ffb9

This issue was referenced by 765ed6ffb9dd9837aec063226bdfa06d07a1b624
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68036
No description provided.