Fix T68036: VSE: 'Remove Gaps' causes audio to go out of sync

Reviewers: sergey

Maniphest Tasks: T68036

Differential Revision: https://developer.blender.org/D5391